tests/ui/fail/incorrect_enum_name.rs
use leptos_unique_ids::leptos_unique_ids;

#[leptos_unique_ids]
pub enum Foo {} // This should be called `Ids` instead

fn main() {}
