tests/ui/fail/incorrect_enum_name.stderr
error: Expected an enum formed with the token tree `enum Ids {{}}`.
 --> ui/fail/incorrect_enum_name.rs:3:1
  |
3 | #[leptos_unique_ids]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `leptos_unique_ids` (in Nightly builds, run with -Z macro-backtrace for more info)
